tests/reference/llvm-global_scope8-240995c.stderr
syntax error: Statement or Declaration expected inside program, found Variable name
 --> tests/global_scope8.f90:3:1
  |
3 | x
  | ^ 
